--- a/web/index.html
+++ b/web/index.html
@@ -55,5 +55,28 @@
       });
     });
   </script>
+  <script type="module">
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-core.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-firestore.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-storage.js";
+
+
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+    apiKey: "AIzaSyC8_H46SpFo-k71y_4PIcbhHyFBIbgqyOA",
+    authDomain: "kcc-membership-software.firebaseapp.com",
+    projectId: "kcc-membership-software",
+    storageBucket: "kcc-membership-software.appspot.com",
+    messagingSenderId: "998351460963",
+    appId: "1:998351460963:web:352c1a8627c117308d7656"
+  };
+
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </body>
 </html>
