--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -28,7 +29,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>kcc_management_software</title>
   <link rel="manifest" href="manifest.json">
@@ -40,16 +41,17 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
+
 <body>
   <script>
-    window.addEventListener('load', function(ev) {
+    window.addEventListener('load', function (ev) {
       // Download main.dart.js
       _flutter.loader.loadEntrypoint({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
         },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
+        onEntrypointLoaded: function (engineInitializer) {
+          engineInitializer.initializeEngine().then(function (appRunner) {
             appRunner.runApp();
           });
         }
@@ -68,16 +70,19 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     const firebaseConfig = {
-    apiKey: "AIzaSyC8_H46SpFo-k71y_4PIcbhHyFBIbgqyOA",
-    authDomain: "kcc-membership-software.firebaseapp.com",
-    projectId: "kcc-membership-software",
-    storageBucket: "kcc-membership-software.appspot.com",
-    messagingSenderId: "998351460963",
-    appId: "1:998351460963:web:352c1a8627c117308d7656"
-  };
+      apiKey: "AIzaSyC8_H46SpFo-k71y_4PIcbhHyFBIbgqyOA",
+      authDomain: "kcc-membership-software.firebaseapp.com",
+      projectId: "kcc-membership-software",
+      storageBucket: "kcc-membership-software.appspot.com",
+      messagingSenderId: "998351460963",
+      appId: "1:998351460963:web:352c1a8627c117308d7656"
+    };
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
+    var dartPdfJsVersion = "3.2.146";
   </script>
+
 </body>
+
 </html>
